--- a/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
@@ -96,6 +96,39 @@
                         style="push">
                   </command>
                </menu>
+	         <menu
+	               id="org.polarsys.chess.modelexplorerpopupmenu.packageverification.id"
+	               label="Architecture Verification">
+	            <command
+	                  commandId="org.polarsys.chess.verificationService.commands.ContractRefinementCommand"
+	                  icon="icons/contract_verification.png"
+	                  label="Check Contract Refinements"
+	                  style="push">
+	               <parameter
+	                     name="store_result"
+	                     value="true">
+	               </parameter>
+	            </command>
+	            <visibleWhen
+	                  checkEnabled="false">
+	               <iterate
+	                     ifEmpty="false"
+	                     operator="and">
+	                  <adapt
+	                        type="org.eclipse.emf.ecore.EObject">
+	                     <instanceof
+	                           value="org.eclipse.uml2.uml.Package">
+	                     </instanceof>
+	                  </adapt>
+	                    <with
+	                     	variable="activeMenuSelection">
+	                  		<count
+	                        	value="1">
+	                  		</count>
+	               		</with>                     
+	               </iterate>
+	            </visibleWhen>
+	         </menu>
             </menuContribution>
             <menuContribution
                   allPopups="false"
@@ -205,6 +238,11 @@
             defaultHandler="org.polarsys.chess.verificationService.ui.commands.ContractRefinementCommand"
             id="org.polarsys.chess.verificationService.commands.ContractRefinementCommand"
             name="Check Contract Refinement on selected component">
+         <commandParameter
+               id="store_result"
+               name="storeResult"
+               optional="true">
+         </commandParameter>
       </command>
       <command
             defaultHandler="org.polarsys.chess.verificationService.ui.commands.debug.RuntimeErrorsOnOSSFileCommand"
