Added contract implementation handling and improvements.

--- a/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
@@ -128,6 +128,16 @@
 	               		</with>                     
 	               </iterate>
 	            </visibleWhen>
+             <command
+                   commandId="org.polarsys.chess.verificationService.commands.CompositeContractImplementationCommand"
+                   icon="icons/contract_verification.png"
+                   label="Check Composite Contract Implementation"
+                   style="push">
+                <parameter
+                      name="store_result"
+                      value="true">
+                </parameter>
+             </command>
 	         </menu>
             </menuContribution>
             <menuContribution
@@ -346,6 +356,11 @@
             defaultHandler="org.polarsys.chess.verificationService.ui.commands.CompositeContractImplementationCommand"
             id="org.polarsys.chess.verificationService.commands.CompositeContractImplementationCommand"
             name="Check Composite Contract Implementation on selected component">
+         <commandParameter
+               id="store_result"
+               name="storeResult"
+               optional="true">
+         </commandParameter>
       </command>
       <command
             defaultHandler="org.polarsys.chess.verificationService.ui.commands.debug.RuntimeErrorsOnSMVFileCommand"
