WIP on trade-off analysis.

--- a/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
+++ b/plugins/contracts/org.polarsys.chess.contracts.verificationService/plugin.xml
@@ -161,7 +161,7 @@
              <command
                    commandId="org.polarsys.chess.verificationService.commands.ModelCheckingCommand2"
                    icon="icons/contract_verification.png"
-                   label="Model check"
+                   label="Model Checking"
                    style="push">
                 <parameter
                       name="store_result"
