added external jar in the paramArchConfigurator
Change-Id: Ia0b5e62a43bcefdc0e14e6dba18aca52f2ff5062

--- a/plugins/org.polarsys.chess.paramArchConfigurator/build.properties
+++ b/plugins/org.polarsys.chess.paramArchConfigurator/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               lib/org.apache.commons.io_2.2.0.v201405211200.jar
